[package]
authors = ["Keagan McClelland <keagan@start9labs.com>"]
description = "Semver extension with optional 4th digit given patch semantics. Designed for package distributors"
documentation = "https://docs.rs/emver"
edition = "2018"
keywords = ["version", "semver", "embassy", "wasm"]
license = "MIT"
name = "emver"
readme = "README.md"
repository = "https://github.com/Start9Labs/emver-rs"
version = "0.1.5"


[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
either = "1.6.1"
fp-core = "0.1.9"
nom = "6.0.0"
serde = { version = "1.0.117", optional = true }
wasm-bindgen = { version = "0.2.68", optional = true }

[dev-dependencies]
proptest = "0.10.1"
serde_yaml = "0.8.14"
